# TinyTorch

./: CMakeLists.txt  README.md  Tensor.cpp  Tensor.hpp  main.cpp  tinytorch_test.py
python/: CMakeLists.txt  tinytorch_py.cpp
src/: CMakeLists.txt  Tensor.cpp
